<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout_top">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/img_back"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_back"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintStart_toEndOf="@id/img_back"
            android:textColor="@color/white"
            android:text="@string/scan_setting"
            android:fontFamily="@font/bold"
            android:id="@+id/tv_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batch_scan"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/semi_bold"
        android:textColor="@color/main_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:id="@+id/tv_batch_scan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:text="@string/manually_crop_images"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintTop_toBottomOf="@id/tv_batch_scan"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/semi_bold"
        android:id="@+id/tv_manually"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:ellipsize="end"
        android:textColor="@color/color_787878"
        android:text="@string/manual_crop_des"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintEnd_toStartOf="@id/switch_manual"
        app:layout_constraintTop_toBottomOf="@id/tv_manually"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_manually_sub"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_manually"
        app:layout_constraintBottom_toBottomOf="@id/tv_manually_sub"
        android:id="@+id/switch_manual"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#DFE6EF"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_manually_sub"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storage_path"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/semi_bold"
        android:textColor="@color/main_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:id="@+id/tv_storage_path"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:text="@string/path_save_file"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintTop_toBottomOf="@id/tv_storage_path"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/semi_bold"
        android:id="@+id/tv_default"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:ellipsize="end"
        android:textColor="@color/color_787878"
        android:text="@string/path_save_file_sample"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintEnd_toStartOf="@id/switch_manual"
        app:layout_constraintTop_toBottomOf="@id/tv_default"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/medium"
        android:id="@+id/tv_default_sub"/>

</androidx.constraintlayout.widget.ConstraintLayout>