<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_top"
        android:background="@color/main_color"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout_top">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/img_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/language"
            android:fontFamily="@font/bold"
            android:id="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@id/img_back"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintStart_toEndOf="@id/img_back"
            android:layout_marginStart="@dimen/_5sdp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_latin"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/latin"
        android:fontFamily="@font/regular"
        android:textColor="@color/color_333333"
        app:layout_constraintEnd_toEndOf="@+id/img_latin"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/img_latin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintTop_toTopOf="@id/tv_latin"
        app:layout_constraintBottom_toBottomOf="@id/tv_latin"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_chinese"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_latin"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/chinese"
        android:fontFamily="@font/regular"
        android:textColor="@color/color_333333"
        app:layout_constraintEnd_toEndOf="@+id/img_latin"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/img_chinese"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintTop_toTopOf="@id/tv_chinese"
        app:layout_constraintBottom_toBottomOf="@id/tv_chinese"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_devanagari"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_chinese"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/devanagari"
        android:fontFamily="@font/regular"
        android:textColor="@color/color_333333"
        app:layout_constraintEnd_toEndOf="@+id/img_latin"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/img_devanagari"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintTop_toTopOf="@id/tv_devanagari"
        app:layout_constraintBottom_toBottomOf="@id/tv_devanagari"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_japanese"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_devanagari"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/japanese"
        android:fontFamily="@font/regular"
        android:textColor="@color/color_333333"
        app:layout_constraintEnd_toEndOf="@+id/img_latin"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/img_japanese"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintTop_toTopOf="@id/tv_japanese"
        app:layout_constraintBottom_toBottomOf="@id/tv_japanese"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_korean"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_japanese"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/korean"
        android:fontFamily="@font/regular"
        android:textColor="@color/color_333333"
        app:layout_constraintEnd_toEndOf="@+id/img_latin"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/img_korean"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_option"
        app:layout_constraintTop_toTopOf="@id/tv_korean"
        app:layout_constraintBottom_toBottomOf="@id/tv_korean"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recognize again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_textview_blue"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:id="@+id/tv_recognize_again"/>
</androidx.constraintlayout.widget.ConstraintLayout>