<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/layout_top">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/img_back"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_back"
            app:layout_constraintBottom_toBottomOf="@id/img_back"
            app:layout_constraintStart_toEndOf="@id/img_back"
            android:textColor="@color/white"
            android:text="@string/pdf_setting"
            android:fontFamily="@font/bold"
            android:id="@+id/tv_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf_setting"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/semi_bold"
        android:textColor="@color/main_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:id="@+id/tv_batch_scan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:text="@string/pdf_page_size"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintTop_toBottomOf="@id/tv_batch_scan"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/semi_bold"
        android:id="@+id/tv_pdf_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:text="@string/pdf_page_orientation"
        app:layout_constraintStart_toStartOf="@id/tv_batch_scan"
        app:layout_constraintTop_toBottomOf="@id/tv_pdf_size"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/semi_bold"
        android:id="@+id/tv_pdf_orientation"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.038"
        android:src="@drawable/ic_down"
        app:layout_constraintTop_toTopOf="@id/tv_pdf_size"
        app:layout_constraintBottom_toBottomOf="@id/tv_pdf_size"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        android:id="@+id/img_down_size"/>
    <TextView
        android:id="@+id/tv_option_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/sample_crop_option"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toTopOf="@id/tv_pdf_size"
        app:layout_constraintBottom_toBottomOf="@id/tv_pdf_size"
        app:layout_constraintEnd_toStartOf="@id/img_down_size"
        android:textColor="@color/main_color"
        android:layout_marginEnd="@dimen/_5sdp"/>


    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.038"
        android:src="@drawable/ic_down"
        app:layout_constraintTop_toTopOf="@id/tv_pdf_orientation"
        app:layout_constraintBottom_toBottomOf="@id/tv_pdf_orientation"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        android:id="@+id/img_down_orientation"/>
    <TextView
        android:id="@+id/tv_option_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/sample_orientation_option"
        android:fontFamily="@font/bold"
        app:layout_constraintTop_toTopOf="@id/tv_pdf_orientation"
        app:layout_constraintBottom_toBottomOf="@id/tv_pdf_orientation"
        app:layout_constraintEnd_toStartOf="@id/img_down_orientation"
        android:textColor="@color/main_color"
        android:layout_marginEnd="@dimen/_5sdp"/>
    <include layout="@layout/layout_option_size"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/layout_option_size"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <include layout="@layout/layout_option_orientation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/layout_option_orientation"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>